--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <td><input type="text" name="apellido" class="inputForm" id="last-name" placeholder="Apellido" />
                     </td>
                 </tr>
-                <tr>
+                <tr id="campoCorreo">
                     <th>Correo Electronico:</th>
                     <td><input type="email" name="correo" class="inputForm" id="agent-email" placeholder="Correo" />
                     </td>
@@ -418,31 +418,23 @@
                                 form.apellido.focus();
                                 return false;
                             }
-                            if (form.correo.value == 0) {
-                                alert("El campo correo esta vacio");
-                                form.correo.value = "";
-                                form.correo.focus();
-                                return false;
-                            }
-                            if (/^(([^<>()[\]\.,;:\s@\"]+(\.[^<>()[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i.test(form.correo.value)) {
-
-                            } else {
-                                alert("La dirección de correo electronico es incorrecta");
-                                return false;
-                            }
+                            
 
                             // ***************** Cerrar Formulario
-                            
+                            var mostrarChat = document.getElementById('chat-container');
                             var cerrarForm = document.getElementById('chatForm');
+                            var botonCerrar = document.getElementById('cerrarChat');
                             cerrarForm.style.display = 'none';
                             cerrarForm.style.zIndex = '-10';
-                            var mostrarBotonIncio = document.getElementById('button-inicio');
-                            mostrarBotonIncio.style.display = 'block';
+                            mostrarChat.style.zIndex = '8888';
+                            mostrarChat.style.display = 'block';
+                            botonCerrar.style.zIndex = '8889';
+                            botonCerrar.style.display = 'block';
 
                             // ***************** Recibir datos del formulario
                             var firstName = document.getElementById('first-name').value;
                             var lastName = document.getElementById('last-name').value;
-                            var agentEmail = document.getElementById('agent-email').value;
+                            //var agentEmail = document.getElementById('agent-email').value;
 
                             // ***************** Enviar informacion JSON
                             webchat.getConfig().setData({
@@ -459,23 +451,24 @@
                                 "customField2": "",
                                 "customField3Label": "",
                                 "customField3": "",
-                                "correo": agentEmail
+                                "correo": ""
                             });
 
-
-                            window.location.reload();
 
                             webchat.updateConfig({
                                 locale: 'es',
                                 welcomeMessage: 'Bienvenido',
                             });
 
-                            return webchat.renderPopup({
-                                width: 400,
-                                height: 400,
-                                title: 'Chat'
-                            });
+                            //return webchat.renderPopup({
+                            //    width: 400,
+                            //    height: 400,
+                            //    title: 'Chat'
+                            //});
 
+                            return webchat.renderFrame({
+                                containerEl: 'chat-container'
+                            });
                         };
                     }
                 })
@@ -488,9 +481,6 @@
 
         window.addEventListener("load", mostrar);
         function mostrar() {
-            form.nombre.value = "";
-            form.apellido.value = "";
-            form.correo.value = "";
             var x = document.getElementById('chatForm');
             var y = document.getElementById('button-inicio');
             x.style.display = 'block';
